Assignment 5/Asgn5_21CS10014_21CS30032/ass5_21CS10014_21CS30032.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH
    WS


Rules useless in parser due to conflicts

   19 argument_expression_list_opt: %empty


State 140 conflicts: 1 shift/reduce
State 293 conflicts: 1 shift/reduce
State 372 conflicts: 1 shift/reduce
State 399 conflicts: 49 shift/reduce, 1 reduce/reduce
State 401 conflicts: 49 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    5 constant: INTEGER_CONSTANT
    6         | FLOATING_CONSTANT
    7         | CHAR_CONSTANT

    8 postfix_expression: primary_expression
    9                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   10                   | postfix_expression ROUND_BRACKET_OPEN ROUND_BRACKET_CLOSE
   11                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   12                   | postfix_expression DOT IDENTIFIER
   13                   | postfix_expression ARROW IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   17                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   18 argument_expression_list_opt: argument_expression_list
   19                             | %empty

   20 argument_expression_list: assignment_expression
   21                         | argument_expression_list COMMA assignment_expression

   22 unary_expression: postfix_expression
   23                 | INCREMENT unary_expression
   24                 | DECREMENT unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   28 unary_operator: BITWISE_AND
   29               | MULTIPLY
   30               | PLUS
   31               | MINUS
   32               | BITWISE_NOT
   33               | LOGICAL_NOT

   34 cast_expression: unary_expression
   35                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression MULTIPLY cast_expression
   38                          | multiplicative_expression DIVIDE cast_expression
   39                          | multiplicative_expression MODULO cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression MINUS multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_SHIFT additive_expression
   45                 | shift_expression RIGHT_SHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LESS_THAN shift_expression
   48                      | relational_expression GREATER_THAN shift_expression
   49                      | relational_expression LESS_THAN_EQUAL shift_expression
   50                      | relational_expression GREATER_THAN_EQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUAL relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression

   54 AND_expression: equality_expression
   55               | AND_expression BITWISE_AND equality_expression

   56 exclusive_OR_expression: AND_expression
   57                        | exclusive_OR_expression BITWISE_XOR AND_expression

   58 inclusive_OR_expression: exclusive_OR_expression
   59                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   66 M: %empty

   67 N: %empty

   68 assignment_expression: conditional_expression
   69                      | unary_expression assignment_operator assignment_expression

   70 assignment_operator: ASSIGN
   71                    | MULTIPLY_ASSIGN
   72                    | DIVIDE_ASSIGN
   73                    | MODULO_ASSIGN
   74                    | PLUS_ASSIGN
   75                    | MINUS_ASSIGN
   76                    | LEFT_SHIFT_ASSIGN
   77                    | RIGHT_SHIFT_ASSIGN
   78                    | BITWISE_AND_ASSIGN
   79                    | BITWISE_XOR_ASSIGN
   80                    | BITWISE_OR_ASSIGN

   81 expression: assignment_expression
   82           | expression COMMA assignment_expression

   83 constant_expression: conditional_expression

   84 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   85 init_declarator_list_opt: init_declarator_list
   86                         | %empty

   87 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   88                       | type_specifier declaration_specifiers_opt
   89                       | type_qualifier declaration_specifiers_opt
   90                       | function_specifier declaration_specifiers_opt

   91 declaration_specifiers_opt: declaration_specifiers
   92                           | %empty

   93 init_declarator_list: init_declarator
   94                     | init_declarator_list COMMA init_declarator

   95 init_declarator: declarator
   96                | declarator ASSIGN initializer

   97 storage_class_specifier: EXTERN
   98                        | STATIC
   99                        | AUTO
  100                        | REGISTER

  101 type_specifier: VOID
  102               | CHAR
  103               | SHORT
  104               | INT
  105               | LONG
  106               | FLOAT
  107               | DOUBLE
  108               | SIGNED
  109               | UNSIGNED
  110               | BOOL
  111               | COMPLEX
  112               | IMAGINARY
  113               | enum_specifier

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 specifier_qualifier_list_opt: specifier_qualifier_list
  117                             | %empty

  118 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  119               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  120               | ENUM IDENTIFIER

  121 identifier_opt: IDENTIFIER
  122               | %empty

  123 enumerator_list: enumerator
  124                | enumerator_list COMMA enumerator

  125 enumerator: IDENTIFIER
  126           | IDENTIFIER ASSIGN constant_expression

  127 type_qualifier: CONST
  128               | RESTRICT
  129               | VOLATILE

  130 function_specifier: INLINE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  135                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  136                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  137                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  138                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  139                  | direct_declarator ROUND_BRACKET_OPEN change_table parameter_type_list ROUND_BRACKET_CLOSE
  140                  | direct_declarator ROUND_BRACKET_OPEN change_table ROUND_BRACKET_CLOSE
  141                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  142                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  143                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  144                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  145                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MULTIPLY SQUARE_BRACKET_CLOSE
  146                  | direct_declarator SQUARE_BRACKET_OPEN MULTIPLY SQUARE_BRACKET_CLOSE

  147 type_qualifier_list_opt: type_qualifier_list
  148                        | %empty

  149 pointer: MULTIPLY type_qualifier_list_opt
  150        | MULTIPLY type_qualifier_list_opt pointer

  151 type_qualifier_list: type_qualifier
  152                    | type_qualifier_list type_qualifier

  153 parameter_type_list: parameter_list
  154                    | parameter_list COMMA ELLIPSIS

  155 parameter_list: parameter_declaration
  156               | parameter_list COMMA parameter_declaration

  157 parameter_declaration: declaration_specifiers declarator
  158                      | declaration_specifiers

  159 identifier_list: IDENTIFIER
  160                | identifier_list COMMA IDENTIFIER

  161 type_name: specifier_qualifier_list

  162 initializer: assignment_expression
  163            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  164            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  165 initializer_list: designation_opt initializer
  166                 | initializer_list COMMA designation_opt initializer

  167 designation_opt: designation
  168                | %empty

  169 designation: designator_list ASSIGN

  170 designator_list: designator
  171                | designator_list designator

  172 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  173           | DOT IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 loop_statement: labeled_statement
  181               | compound_statement
  182               | expression_statement
  183               | selection_statement
  184               | iteration_statement
  185               | jump_statement

  186 labeled_statement: IDENTIFIER COLON statement
  187                  | CASE constant_expression COLON statement
  188                  | DEFAULT COLON statement

  189 compound_statement: CURLY_BRACKET_OPEN X change_table block_item_list_opt CURLY_BRACKET_CLOSE

  190 block_item_list_opt: block_item_list
  191                    | %empty

  192 block_item_list: block_item
  193                | block_item_list M block_item

  194 block_item: declaration
  195           | statement

  196 expression_statement: expression SEMICOLON
  197                     | SEMICOLON

  198 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N THEN
  199                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
  200                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  201 iteration_statement: WHILE W ROUND_BRACKET_OPEN X change_table M expression ROUND_BRACKET_CLOSE M loop_statement
  202                    | WHILE W ROUND_BRACKET_OPEN X change_table M expression ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE
  203                    | DO D M loop_statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  204                    | DO D CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  205                    | FOR F ROUND_BRACKET_OPEN X change_table declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  206                    | FOR F ROUND_BRACKET_OPEN X change_table expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  207                    | FOR F ROUND_BRACKET_OPEN X change_table expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  208                    | FOR F ROUND_BRACKET_OPEN X change_table declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  209 F: %empty

  210 W: %empty

  211 D: %empty

  212 X: %empty

  213 change_table: %empty

  214 jump_statement: GOTO IDENTIFIER SEMICOLON
  215               | CONTINUE SEMICOLON
  216               | BREAK SEMICOLON
  217               | RETURN expression SEMICOLON
  218               | RETURN SEMICOLON

  219 translation_unit: external_declaration
  220                 | translation_unit external_declaration

  221 external_declaration: function_definition
  222                     | declaration

  223 function_definition: declaration_specifiers declarator declaration_list_opt change_table CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  224 declaration_list_opt: declaration_list
  225                     | %empty

  226 declaration_list: declaration
  227                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 99
    BREAK (259) 216
    CASE (260) 187
    CHAR (261) 102
    CONST (262) 127
    CONTINUE (263) 215
    DEFAULT (264) 188
    DO (265) 203 204
    DOUBLE (266) 107
    ELSE (267) 199
    ENUM (268) 118 119 120
    EXTERN (269) 97
    FLOAT (270) 106
    FOR (271) 205 206 207 208
    GOTO (272) 214
    IF (273) 198 199
    INLINE (274) 130
    INT (275) 104
    LONG (276) 105
    REGISTER (277) 100
    RESTRICT (278) 128
    RETURN (279) 217 218
    SHORT (280) 103
    SIGNED (281) 108
    SIZEOF (282) 26 27
    STATIC (283) 98 142 143 144
    STRUCT (284)
    SWITCH (285) 200
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 109
    VOID (289) 101
    VOLATILE (290) 129
    WHILE (291) 201 202 203 204
    BOOL (292) 110
    COMPLEX (293) 111
    IMAGINARY (294) 112
    SQUARE_BRACKET_OPEN (295) 9 135 136 137 138 142 143 144 145 146 172
    SQUARE_BRACKET_CLOSE (296) 9 135 136 137 138 142 143 144 145 146 172
    ROUND_BRACKET_OPEN (297) 4 10 11 16 17 27 35 134 139 140 141 198 199 200 201 202 203 204 205 206 207 208
    ROUND_BRACKET_CLOSE (298) 4 10 11 16 17 27 35 134 139 140 141 198 199 200 201 202 203 204 205 206 207 208
    CURLY_BRACKET_OPEN (299) 16 17 118 119 163 164 189 202 204 207 208 223
    CURLY_BRACKET_CLOSE (300) 16 17 118 119 163 164 189 202 204 207 208 223
    DOT (301) 12 173
    ARROW (302) 13
    INCREMENT (303) 14 23
    DECREMENT (304) 15 24
    BITWISE_AND (305) 28 55
    BITWISE_OR (306) 59
    BITWISE_XOR (307) 57
    BITWISE_NOT (308) 32
    LOGICAL_AND (309) 61
    LOGICAL_OR (310) 63
    LOGICAL_NOT (311) 33
    MULTIPLY (312) 29 37 145 146 149 150
    DIVIDE (313) 38
    MODULO (314) 39
    PLUS (315) 30 41
    MINUS (316) 31 42
    LEFT_SHIFT (317) 44
    RIGHT_SHIFT (318) 45
    LESS_THAN (319) 47
    GREATER_THAN (320) 48
    LESS_THAN_EQUAL (321) 49
    GREATER_THAN_EQUAL (322) 50
    EQUAL (323) 52
    NOT_EQUAL (324) 53
    ASSIGN (325) 70 96 126 169
    PLUS_ASSIGN (326) 74
    MINUS_ASSIGN (327) 75
    MULTIPLY_ASSIGN (328) 71
    DIVIDE_ASSIGN (329) 72
    MODULO_ASSIGN (330) 73
    LEFT_SHIFT_ASSIGN (331) 76
    RIGHT_SHIFT_ASSIGN (332) 77
    BITWISE_AND_ASSIGN (333) 78
    BITWISE_XOR_ASSIGN (334) 79
    BITWISE_OR_ASSIGN (335) 80
    COMMA (336) 17 21 82 94 119 124 154 156 160 164 166
    COLON (337) 65 186 187 188
    SEMICOLON (338) 84 196 197 203 204 214 215 216 217 218
    ELLIPSIS (339) 154
    QUESTION_MARK (340) 65
    HASH (341)
    INTEGER_CONSTANT <intval> (342) 5
    FLOATING_CONSTANT <strval> (343) 6
    CHAR_CONSTANT <strval> (344) 7
    STRING_LITERAL <strval> (345) 3
    IDENTIFIER <sym> (346) 1 12 13 120 121 125 126 133 159 160 173 186 214
    THEN (347) 198
    WS (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    primary_expression <expr> (95)
        on left: 1 2 3 4
        on right: 8
    constant <sym> (96)
        on left: 5 6 7
        on right: 2
    postfix_expression <arr> (97)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 9 10 11 12 13 14 15 22
    argument_expression_list_opt <nparam> (98)
        on left: 18 19
        on right: 11
    argument_expression_list <nparam> (99)
        on left: 20 21
        on right: 18 21
    unary_expression <arr> (100)
        on left: 22 23 24 25 26 27
        on right: 23 24 26 34 69
    unary_operator <op> (101)
        on left: 28 29 30 31 32 33
        on right: 25
    cast_expression <arr> (102)
        on left: 34 35
        on right: 25 35 36 37 38 39
    multiplicative_expression <expr> (103)
        on left: 36 37 38 39
        on right: 37 38 39 40 41 42
    additive_expression <expr> (104)
        on left: 40 41 42
        on right: 41 42 43 44 45
    shift_expression <expr> (105)
        on left: 43 44 45
        on right: 44 45 46 47 48 49 50
    relational_expression <expr> (106)
        on left: 46 47 48 49 50
        on right: 47 48 49 50 51 52 53
    equality_expression <expr> (107)
        on left: 51 52 53
        on right: 52 53 54 55
    AND_expression <expr> (108)
        on left: 54 55
        on right: 55 56 57
    exclusive_OR_expression <expr> (109)
        on left: 56 57
        on right: 57 58 59
    inclusive_OR_expression <expr> (110)
        on left: 58 59
        on right: 59 60 61
    logical_AND_expression <expr> (111)
        on left: 60 61
        on right: 61 62 63
    logical_OR_expression <expr> (112)
        on left: 62 63
        on right: 63 64 65
    conditional_expression <expr> (113)
        on left: 64 65
        on right: 65 68 83
    M <bp> (114)
        on left: 66
        on right: 61 63 65 193 198 199 201 202 203 204 205 206 207 208
    N <stmt> (115)
        on left: 67
        on right: 65 198 199 205 206 207 208
    assignment_expression <expr> (116)
        on left: 68 69
        on right: 20 21 69 81 82 135 137 142 143 144 162
    assignment_operator (117)
        on left: 70 71 72 73 74 75 76 77 78 79 80
        on right: 69
    expression <expr> (118)
        on left: 81 82
        on right: 4 9 65 82 196 198 199 200 201 202 203 204 205 206 207 208 217
    constant_expression <expr> (119)
        on left: 83
        on right: 126 172 187
    declaration (120)
        on left: 84
        on right: 194 205 208 222 226 227
    init_declarator_list_opt (121)
        on left: 85 86
        on right: 84
    declaration_specifiers (122)
        on left: 87 88 89 90
        on right: 84 91 157 158 223
    declaration_specifiers_opt (123)
        on left: 91 92
        on right: 87 88 89 90
    init_declarator_list (124)
        on left: 93 94
        on right: 85 94
    init_declarator <sym> (125)
        on left: 95 96
        on right: 93 94
    storage_class_specifier (126)
        on left: 97 98 99 100
        on right: 87
    type_specifier (127)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 88 114
    specifier_qualifier_list (128)
        on left: 114 115
        on right: 116 161
    specifier_qualifier_list_opt (129)
        on left: 116 117
        on right: 114 115
    enum_specifier (130)
        on left: 118 119 120
        on right: 113
    identifier_opt (131)
        on left: 121 122
        on right: 118 119
    enumerator_list (132)
        on left: 123 124
        on right: 118 119 124
    enumerator (133)
        on left: 125 126
        on right: 123 124
    type_qualifier (134)
        on left: 127 128 129
        on right: 89 115 151 152
    function_specifier (135)
        on left: 130
        on right: 90
    declarator <sym> (136)
        on left: 131 132
        on right: 95 96 134 157 223
    direct_declarator <sym> (137)
        on left: 133 134 135 136 137 138 139 140 141 142 143 144 145 146
        on right: 131 132 135 136 137 138 139 140 141 142 143 144 145 146
    type_qualifier_list_opt (138)
        on left: 147 148
        on right: 149 150
    pointer <symtyp> (139)
        on left: 149 150
        on right: 131 150
    type_qualifier_list (140)
        on left: 151 152
        on right: 135 136 142 144 145 147 152
    parameter_type_list (141)
        on left: 153 154
        on right: 139
    parameter_list (142)
        on left: 155 156
        on right: 153 154 156
    parameter_declaration (143)
        on left: 157 158
        on right: 155 156
    identifier_list (144)
        on left: 159 160
        on right: 141 160
    type_name (145)
        on left: 161
        on right: 16 17 27 35
    initializer <sym> (146)
        on left: 162 163 164
        on right: 96 165 166
    initializer_list (147)
        on left: 165 166
        on right: 16 17 163 164 166
    designation_opt (148)
        on left: 167 168
        on right: 165 166
    designation (149)
        on left: 169
        on right: 167
    designator_list (150)
        on left: 170 171
        on right: 169 171
    designator (151)
        on left: 172 173
        on right: 170 171
    statement <stmt> (152)
        on left: 174 175 176 177 178 179
        on right: 186 187 188 195 198 199 200
    loop_statement <stmt> (153)
        on left: 180 181 182 183 184 185
        on right: 201 203 205 206
    labeled_statement <stmt> (154)
        on left: 186 187 188
        on right: 174 180
    compound_statement <stmt> (155)
        on left: 189
        on right: 175 181
    block_item_list_opt <stmt> (156)
        on left: 190 191
        on right: 189 202 204 207 208 223
    block_item_list <stmt> (157)
        on left: 192 193
        on right: 190 193
    block_item <stmt> (158)
        on left: 194 195
        on right: 192 193
    expression_statement <expr> (159)
        on left: 196 197
        on right: 176 182 205 206 207 208
    selection_statement <stmt> (160)
        on left: 198 199 200
        on right: 177 183
    iteration_statement <stmt> (161)
        on left: 201 202 203 204 205 206 207 208
        on right: 178 184
    F (162)
        on left: 209
        on right: 205 206 207 208
    W (163)
        on left: 210
        on right: 201 202
    D (164)
        on left: 211
        on right: 203 204
    X (165)
        on left: 212
        on right: 189 201 202 205 206 207 208
    change_table (166)
        on left: 213
        on right: 139 140 189 201 202 205 206 207 208 223
    jump_statement <stmt> (167)
        on left: 214 215 216 217 218
        on right: 179 185
    translation_unit (168)
        on left: 219 220
        on right: 0 220
    external_declaration (169)
        on left: 221 222
        on right: 219 220
    function_definition (170)
        on left: 223
        on right: 221
    declaration_list_opt (171)
        on left: 224 225
        on right: 223
    declaration_list (172)
        on left: 226 227
        on right: 224 227


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   99 storage_class_specifier: AUTO .

    $default  reduce using rule 99 (storage_class_specifier)


State 2

  102 type_specifier: CHAR .

    $default  reduce using rule 102 (type_specifier)


State 3

  127 type_qualifier: CONST .

    $default  reduce using rule 127 (type_qualifier)


State 4

  107 type_specifier: DOUBLE .

    $default  reduce using rule 107 (type_specifier)


State 5

  118 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  119               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  120               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 122 (identifier_opt)

    identifier_opt  go to state 33


State 6

   97 storage_class_specifier: EXTERN .

    $default  reduce using rule 97 (storage_class_specifier)


State 7

  106 type_specifier: FLOAT .

    $default  reduce using rule 106 (type_specifier)


State 8

  130 function_specifier: INLINE .

    $default  reduce using rule 130 (function_specifier)


State 9

  104 type_specifier: INT .

    $default  reduce using rule 104 (type_specifier)


State 10

  105 type_specifier: LONG .

    $default  reduce using rule 105 (type_specifier)


State 11

  100 storage_class_specifier: REGISTER .

    $default  reduce using rule 100 (storage_class_specifier)


State 12

  128 type_qualifier: RESTRICT .

    $default  reduce using rule 128 (type_qualifier)


State 13

  103 type_specifier: SHORT .

    $default  reduce using rule 103 (type_specifier)


State 14

  108 type_specifier: SIGNED .

    $default  reduce using rule 108 (type_specifier)


State 15

   98 storage_class_specifier: STATIC .

    $default  reduce using rule 98 (storage_class_specifier)


State 16

  109 type_specifier: UNSIGNED .

    $default  reduce using rule 109 (type_specifier)


State 17

  101 type_specifier: VOID .

    $default  reduce using rule 101 (type_specifier)


State 18

  129 type_qualifier: VOLATILE .

    $default  reduce using rule 129 (type_qualifier)


State 19

  110 type_specifier: BOOL .

    $default  reduce using rule 110 (type_specifier)


State 20

  111 type_specifier: COMPLEX .

    $default  reduce using rule 111 (type_specifier)


State 21

  112 type_specifier: IMAGINARY .

    $default  reduce using rule 112 (type_specifier)


State 22

  222 external_declaration: declaration .

    $default  reduce using rule 222 (external_declaration)


State 23

   84 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON
  223 function_definition: declaration_specifiers . declarator declaration_list_opt change_table CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 34
    MULTIPLY            shift, and go to state 35
    IDENTIFIER          shift, and go to state 36

    $default  reduce using rule 86 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


State 24

   87 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   88 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  113 type_specifier: enum_specifier .

    $default  reduce using rule 113 (type_specifier)


State 27

   89 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 46
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   90 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 47
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  220 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 48
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31


State 30

  219 translation_unit: external_declaration .
